2009-10-08	fabian

	* Fixed a bug that causes the bell icon never shows.
	* Pasting DOS-format strings now no longer have extra new lines.
	
2009-10-07  fabian

    * We now use NSFileHandle to monitor session activity in PTYTask.m. The CPU
      usage is very low even with lots of tabs open.
	* Allow bookmark names to include macros defined by $$ (bug #2142459).
    * Cleaned up code. 
	
2009-10-01	fabian

	* Tweaked close confirmation behavior.
	
2009-09-30	fabian

	* Bookmark sort now an option.
	* Folder name in bookmarks window is now editable.
	* Double-clicking folder names to expand/collapse them.
	* Fixed a bug that stops one to create a bbookmark in an empty folder.
	
2009-09-29	fabian

	* Implemented xterm's window report sequences.
	
2008-09-28	fabian

	* now iTerm uses just one thread to avoid synchronization problem.
	* Removed all the locks/semaphores, coz we no longer need them
	* Fixed a bug of processing wrapping text.
	* Fixed DECCOLM: now screens are correctly cleared.


2008-09-24  fabian

    * Cleaned up for the 0.9.6 release.
    * Fixed a few Panther building problems (haven't tested under Panther).
    
2008-09-23	delx

	* Backed out duplicate change.
	* Don't allow toggling transparency in full screen mode
	* Full screen windows get a window title
	* Restore windows to correct positions after full screen

2008-09-22  fabian
    
    * Fixed a bug that enables blur when de-miniaturizing windows.
	* Disable transparency in the full screen mode.
	* Fixed a transparency consistency problem when moving tabs between windows.
    
2008-09-20	fabian

	* Added support of ESC\ as the end of string to VT100Terminal.
	
2008-09-18  fabian

    * Minor UI change: Double-clicking a bookmark item now launches it.
    * UI change: Now bookmarks are sorted alphabetically.
    * UI change: Now you can open all items in a bookmark folder from the bookmark window.
    * UI change: The bookmarks window now has a column for shortcut key.