@@ -7,10 +7,10 @@ www.andymatuschak.org/xml-namespaces/sparkle">
         <description>Most recent changes with links to updates.</description> 
         <language>en</language> 
         <item> 
-            <title>Version 0.9.6</title> 
+            <title>Version 0.9.6.1012</title> 
             <description>http://iterm.sourceforge.net/Changelog.html</description> 
-            <pubDate>Wed, 24 Sep 2008 15:00:00 +0000</pubDate> 
-            <enclosure url="http://downloads.sourceforge.net/iterm/iTerm_0.9.6.dmg" length="1934268" type="application/octet-stream"/>
+            <pubDate>Sun, 12 Oct 2008 00:21:00 +0000</pubDate> 
+            <enclosure url="http://iterm.sourceforge.net/iTerm_0.9.6.1012.zip" length="1594909" type="application/octet-stream"/>
         </item> 
     </channel> 
 </rss>
