@@ -22,9 +22,9 @@
 <TD VALIGN="TOP" BGCOLOR="#FFFFFF">
 <FONT SIZE="5"><STRONG>Download:</STRONG></FONT><BR>
 <UL><A HREF="http://sourceforge.net/project/showfiles.php?group_id=67789">iTerm 0.9.6</A>: The latest iTerm release<IMG src="new.gif"><BR>
-<!--<A HREF="http://iterm.sourceforge.net/iTerm_0.9.5.0915.zip">Recent binary build from CVS</A> (0.9.5.0909, English only, <A HREF="http://iterm.sourceforge.net/Changelog.html">changelog</a>)<IMG src="new.gif"><BR>
-This hopefully will be our last development build before we release 0.9.6.<br>
-Tiger or later. <BR><BR>-->
+<A HREF="http://iterm.sourceforge.net/iTerm_0.9.6.1012.zip">Recent binary build from CVS</A> (0.9.6.1012, English only, <A HREF="http://iterm.sourceforge.net/Changelog.html">changelog</a>)<IMG src="new.gif"><BR>
+
+Tiger or later. <BR><BR>
 <BR>If your old preferences are lost after the upgrade, please quit your iTerm. Then go to ~/Library/Preferences/, and copy or rename
     iTerm.plist to net.sourceforge.iTerm.plist.<BR><BR>
 
